# TinyRenderer

./: Algebra.h  CMakeLists.txt  Draw.cpp  Draw.h  GL_Impl.cpp  GL_Impl.h  Images.cpp  Images.h  Mesh.cpp  Mesh.h  Shaders.cpp  Shaders.h  TGA.cpp  TGA.h  Utils.cpp  Utils.h  main.cpp  readme.md  resources.rc.in
